# f-spot

./: Makefile.addins  Makefile.include  configure.ac
extensions/Editors/BWEditor/: Makefile.am
extensions/Exporters/FacebookExport/: FacebookExport.cs  Makefile.am
extensions/Exporters/FlickrExport/: FlickrExport.cs  Makefile.am
extensions/Exporters/FlickrExport/FlickrNet/: Makefile.am
extensions/Exporters/FolderExport/: FolderExport.cs  Makefile.am
extensions/Exporters/GalleryExport/: GalleryExport.cs  Makefile.am
extensions/Exporters/PicasaWebExport/: Makefile.am  PicasaWebExport.cs
extensions/Exporters/SmugMugExport/: Makefile.am  SmugMugExport.cs
extensions/Exporters/TabbloExport/: Makefile.am
extensions/Exporters/ZipExport/: Makefile.am  ZipExport.cs
extensions/Tools/DevelopInUFraw/: DevelopInUFRaw.cs
extensions/Tools/LiveWebGallery/: Makefile.am
extensions/Tools/RawPlusJpeg/: RawPlusJpeg.cs
help/de/: de.po
icons/: Makefile.am
lib/: Makefile.am
lib/libfspotraw/: .gitignore  Makefile.am  fspot-librawloader-marshal.list  fspot-librawloader.cpp  fspot-librawloader.h  memory-test.c
lib/libfspotraw-sharp/: .gitignore  Makefile.am  libfspotraw-sharp.dll.config  libfspotraw-sharp.dll.config.in  libfspotraw.metadata  libfspotraw.sources
lib/libfspotraw/LibRaw/: Changelog.rus  Changelog.txt
lib/libfspotraw/LibRaw/dcraw/: dcraw.c
lib/libfspotraw/LibRaw/internal/: dcraw_common.cpp
lib/libfspotraw/LibRaw/libraw/: libraw_datastream.h
lib/libfspotraw/LibRaw/src/: libraw_cxx.cpp
po/: POTFILES.in  POTFILES.skip  lt.po  pl.po  sv.po
src/: .gitignore  Db.cs  FSpot.Imaging.dll.config.in  FileImportBackend.cs  GroupSelector.cs  ImageLoaderThread.cs  MainWindow.cs  Makefile.am  PhotoImageView.cs  PhotoLoader.cs  PhotoStore.cs  PhotoVersionCommands.cs  PixbufCache.cs  PixbufUtils.cs  PrintOperation.cs  RotateCommand.cs  SendEmail.cs  SingleView.cs  SlideView.cs  ThumbnailCache.cs  ThumbnailCommand.cs  ThumbnailGenerator.cs  Updater.cs  UriCollection.cs  f-spot.in
src/Clients/MainApp/: MainApp.csproj  Makefile.am
src/Clients/MainApp/FSpot/: App.cs  MainWindow.cs  PhotoQuery.cs  TimeAdaptor.cs
src/Clients/MainApp/FSpot.Database/: DatabasePhoto.cs  DatabasePhotoListModel.cs  DatabasePhotoModelCache.cs  DatabasePhotoVersion.cs  DatabaseSource.cs  PhotoModelProvider.cs  PhotoVersionModelProvider.cs
src/Clients/MainApp/FSpot.Gui.MetadataEditor/: BasicEditorPage.cs  EditorController.cs  EditorDialog.cs  EditorPage.cs  EditorPhoto.cs  FieldEditorSyncButton.cs  IFieldEditor.cs  InfoEditorPresetWidget.cs  LabelledFieldEditorWidget.cs  LabelledSyncEditorWidget.cs
src/Clients/MainApp/FSpot.Gui.MetadataEditor/ui/: MetadataEditorDialog.ui
src/Clients/MainApp/FSpot.UI.Dialog/: EditTagIconDialog.cs
src/Clients/MainApp/ui/: main_window.ui
src/ColorAdjustment/: FullColorAdjustment.cs
src/Core/: App.cs  Photo.cs  PhotoChanges.cs  PhotoVersion.cs  PhotoVersionType.cs
src/Core/FSpot.Core/: FSpot.Core.csproj  Makefile.am
src/Core/FSpot.Core/FSpot.Core/: IPhotoListModel.cs  IPhotoSource.cs  ISource.cs
src/Editors/: ColorEditor.cs  CropEditor.cs  DesaturateEditor.cs  Editor.cs  EditorNode.cs  EditorState.cs  RedEyeEditor.cs  RepeatableEditor.cs  RepeatableEditorState.cs  SepiaEditor.cs  SoftFocusEditor.cs  TiltEditor.cs
src/Editors/Processing/: ColorAdjustStep.cs  Pipeline.cs  Setting.cs  SettingStore.cs  Step.cs
src/Filters/: JpegFilter.cs  ProcessedFormatFilter.cs  ResizeFilter.cs  SharpFilter.cs
src/Imaging/: Ciff.cs  Exif.cs  IOChannel.cs  IRawFile.cs  IWritableImageFile.cs  ImageFile.cs  InternalProcess.cs  JpegFile.cs  MetadataStore.cs  MrwFile.cs  PixbufUtils.cs  PngFile.cs  PnmFile.cs  RafFile.cs  SvgFile.cs  Tiff.cs  X3fFile.cs
src/Import/: ImportController.cs
src/Jobs/: CleanHiddenVersionsJob.cs
src/Loaders/: AreaPreparedEventArgs.cs  AreaUpdatedEventArgs.cs  GdkImageLoader.cs  IImageLoader.cs  IImageLoaderExtensions.cs  IPhotoLoader.cs  ImageLoader.cs  ImageLoaderItem.cs  ImageLoaderItemExtensions.cs  ItemCompletedEventArgs.cs  LibrawImageLoader.cs  PhotoLoaderCache.cs  ProgressHintEventArgs.cs  XdgThumbnailLoader.cs
src/Tasks/: QueuedTask.cs  Task.cs  WorkerThreadTask.cs
src/Tasks/Tests/: TaskPriorityTests.cs  TaskTests.cs
src/UI.Dialog/: EditTagIconDialog.cs
src/Utils/: PixbufExtensions.cs
src/Widgets/: EditorPage.cs  Filmstrip.cs  IconView.cs  IconViewCache.cs  ImageInfo.cs  ImageView.cs  InfoBox.cs  PreviewPopup.cs  SlideShow.cs
src/ui/: main_window.ui
tests/src/: Makefile.am
